tests/samples/invalid/pointer_in_word.pn
word128 Foo
{
	bar: &u8,
	baz: u32,
}
